syntax = "proto3";

package com.taotao.cloud.sys.api.grpc;

option java_multiple_files = true;
option java_package = "com.taotao.cloud.member.api.grpc";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service MyService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
